[project]
name = "routine"
version = "0.1.0"
description = "Smart door display module"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.1",
    "matplotlib>=3.10.8",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "shapely>=2.1.2",
]
